--- a/style.css
+++ b/style.css
@@ -16,18 +16,25 @@ body {
 }
 
 form { 
-   background-color:rgba(0, 0, 0, 0.329);
-   color: white;
-   box-shadow: -2px 9px 12px 4px rgba(0, 0, 0, 0.49);
-    -webkit-box-shadow: -2px 9px 12px 4px rgba(0, 0, 0, 0.49);
-    -moz-box-shadow: -2px 9px 12px 4px rgba(0, 0, 0, 0.49);
-    border-top-left-radius: 15px;
-    border-bottom-right-radius: 15px;
    max-width: 500px;
    margin: auto;
    margin-top: 50px;
    text-align: center;
-   
+}
+
+fieldset {
+    border: 0.2em solid rgba(0, 0, 0, 0.365);
+    border-top-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background-color:rgba(0, 0, 0, 0.329);
+    color: white;
+}
+
+legend {
+    font: bolder var(--font-01) white;
+    font-size: 1.2em;
+    font-variant: small-caps;
+    text-shadow: 1px 1px 2px rgba(255, 68, 0, 0.781);
 }
 
 section.card-top {
